<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FillerCreepActivity!</string>
    <string name="app_name">FillerCreep</string>
    <string name="welcome">Welcome To Filler Creep</string>
    <string name="newgame">Reset/New Game</string>
    <string name="scoreview">Current Score Only</string>
    <string name="textonlyview">Text Only Interface</string>
    <string name="seemap">See the Universe</string>
    <string name="graphicalview">Graphical Interface to the Universe</string>
    <string name="darkmatter">Dark Matter</string>
    <string name="darkenergy">Dark Energy</string>
    <string name="energy">Energy</string>
    <string name="matter">Matter</string>
    <string name="ying">Ying</string>
    <string name="yang">Yang</string>
    <string name="autoplay">Auto-Play</string>
    
</resources>