<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ImageButton
        android:id="@+id/gamegraphicalview"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/gameyin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ying"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/gameyang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yang"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <Button
            android:id="@+id/autoplay"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/autoplay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <ImageButton
            android:id="@+id/xgameenergy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/energy"
            android:text="@string/energy" />

        <ImageButton
            android:id="@+id/gamedarkenergy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/dark_energy"
            android:text="@string/darkenergy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <ImageButton
            android:id="@+id/gamematter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/matter"
            android:text="@string/matter" />

        <ImageButton
            android:id="@+id/gamedarkmatter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/dark_matter"
            android:text="@string/darkmatter" />

    </LinearLayout>
</LinearLayout>